--- a/source/stylesheets/components/_index.scss
+++ b/source/stylesheets/components/_index.scss
@@ -1,3 +1,7 @@
 // Import your components CSS files here.
 @import "alert";
 @import "navbar";
+@import "cards";
+@import "banner";
+@import "avatar";
+
