--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,10 +1,18 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
-$blue: #469AE0;
-$yellow: #FDB631;
+$red: #EF5D5A;
+$blue: #469AE9;
+$yellow: #FCB631;
 $orange: #E67E22;
 $green: #32B796;
-$gray: #000000;
+$gray: #333;
 $light-gray: #F4F4F4;
+$white: #FFF;
+$black-light: rgba(0,0,0,0.2)
+$black-medium: rgba(0,0,0,0.6)
+$black: #000;
+$link: #616668;
+$grey: #E6E6E6;
+$grey-menu: #999999;
+$link-hover: #da552f;
