--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -9,8 +9,8 @@ $green: #32B796;
 $gray: #333;
 $light-gray: #F4F4F4;
 $white: #FFF;
-$black-light: rgba(0,0,0,0.2)
-$black-medium: rgba(0,0,0,0.6)
+$black-light: rgba(0,0,0,0.2);
+$black-medium: rgba(0,0,0,0.6);
 $black: #000;
 $link: #616668;
 $grey: #E6E6E6;
